// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonOutline Focus: renders outline when tabbing into focus, but not when clicking 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 1rem;
  height: 36px;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  border: 1px solid #C1C6CC;
  color: #6C43E0;
}

.c1:hover,
.c1:focus,
.c1.hover {
  border-color: #6C43E0;
  color: #412399;
}

.c1:active,
.c1.active {
  background: #6C43E0;
  border-color: #6C43E0;
  color: #FFFFFF;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  border-color: #C1C6CC;
  color: #6C43E0;
}

<button
  class="c0 c1"
>
  focus
</button>
`;

exports[`ButtonOutline Focus: renders outline when tabbing into focus, but not when clicking 2`] = `
<button
  class="sc-bxivhb byEMEJ sc-ifAKCX sc-EHOje dFdbyE"
>
  focus
</button>
`;

exports[`ButtonOutline has the correct style 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 1rem;
  height: 36px;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  border: 1px solid #C1C6CC;
  color: #6C43E0;
}

.c1:hover,
.c1:focus,
.c1.hover {
  border-color: #6C43E0;
  color: #412399;
}

.c1:active,
.c1.active {
  background: #6C43E0;
  border-color: #6C43E0;
  color: #FFFFFF;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  border-color: #C1C6CC;
  color: #6C43E0;
}

<button
  class="c0 c1"
>
  Outline
</button>
`;

exports[`ButtonOutline is rendered  1`] = `ShallowWrapper {}`;
